--- a/.github/workflows/check-deploy-notify.yml
+++ b/.github/workflows/check-deploy-notify.yml
@@ -1,5 +1,5 @@
 # This workflow will fetch from the parent repo, check for changes in folders, and then zip, deploy, and notify if any have changed.
-name: Sync, Deploy, and Notify
+name: Sync, Deploy, and Notify (QSS Student)
 
 # Run workflow via cron at 12:30 ET
 on:
